--- a/bower.json
+++ b/bower.json
@@ -3,15 +3,15 @@
   "dependencies": {
     "handlebars": "~2.0.0",
     "jquery": "^1.11.1",
-    "ember": ".11.0-beta.1+canary.4c547e32",
-    "ember-data": "1.0.0-beta.12",
-    "ember-resolver": "~0.1.10",
-    "loader.js": "stefanpenner/loader.js#1.0.1",
+    "ember": "1.13.10",
+    "ember-data": "1.13.13",
+    "ember-resolver": "~0.1.18",
+    "loader.js": "stefanpenner/loader.js#3.2.1",
     "ember-cli-shims": "stefanpenner/ember-cli-shims#0.0.3",
-    "ember-cli-test-loader": "rwjblue/ember-cli-test-loader#0.0.4",
-    "ember-load-initializers": "stefanpenner/ember-load-initializers#0.0.2",
-    "ember-qunit": "0.1.8",
-    "ember-qunit-notifications": "0.0.4",
-    "qunit": "~1.15.0"
+    "ember-cli-test-loader": "rwjblue/ember-cli-test-loader#0.1.3",
+    "ember-load-initializers": "stefanpenner/ember-load-initializers#0.1.5",
+    "ember-qunit": "0.4.9",
+    "ember-qunit-notifications": "0.0.7",
+    "qunit": "~1.18.0"
   }
 }
